Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33169

Alter sequence 2nd ps fails while alter sequence 2nd time (no ps) succeeds

    XMLWordPrintable

Details

    Description

      In the following case, statements 1 and 2 succeed, so is statement 3, but statement 4 fails. It should succeed because 2 succeeds.

      11.4 3fad2b115569864d8c1b7ea90ce92aa895cfef08

      create sequence s;
      /* 1 */ alter sequence s maxvalue 123;
      /* 2 */ alter sequence s maxvalue 123;
      drop sequence s;
       
      create sequence s;
      prepare stmt from 'alter sequence s maxvalue 123';
      /* 3 */ execute stmt;
      /* 4 */ execute stmt;
      deallocate prepare stmt;
      drop sequence s;
      

      Could also reprod at 10.4 9695974e4b212aa4820e0ccfeb164f5444c0d58e.

      The error is

      mysqltest: At line 10: query '/* 4 */ execute stmt' failed: 4085: Sequence 'test.s' has out of range value for options
      

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              ycp Yuchen Pei
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4h 10m
                  4h 10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.