MDEV-33169 Reset sequence used fields after check in alter sequence

The bitmap is temporarily flipped to ~0 for the sake of checking all
fields. It needs to be restored because it will be reused in second
and subsequent ps execution.